# scvalex.github.com

./: index.html
_layouts/: article.html
articles/: SegmentTree.html  Sudoku.html
articles/SegmentTree/: Tests.hs  segmenttree.cabal
articles/SegmentTree/Data/: SegmentTree.hs
articles/SegmentTree/Data/SegmentTree/: Examples.hs
articles/segtree/: SegTree.hs  SegTreeExamples.hs  Tests.hs
articles/segtree/Data/: SegmentTree.hs
articles/sudoku/: board1.txt  board2.txt  sudoku.hs
articles/trc/: form1.html  form2.html
css/: blogCommentPreview.css  screen.css  syntax.css
js/: blogCommentPreview.js  common.js  index.js
other/: blogCommentPreview.html  blogCommentPreview.js
