Name:		SegmentTree
Version:	0.1
Cabal-Version:	>= 1.2
License:	LGPL
License-File:	LICENSE
Author:		Alexandru Scvortov
Homepage:	http://scvalex.github.com/articles/SegmentTree.html
Category:	Data
Synopsis:	A datastructure that supports logarithmic time accumulation 
                (mconcat) operations on list intervals.
Build-type:	Simple

Library
  Build-Depends:	base
  Exposed-modules:	Data.SegmentTree, Data.SegmentTree.Examples
